# CPP-Scratch

./: CMakeLists.txt  DecryptMessage.cpp  SalesPath.cpp  almostPalindrome.cpp  anagrams.cpp  arrayQuadruplet.cpp  challenge.cpp  consecutiveSum.cpp  doesCircleExist.cpp  highestScoringWord.cpp  mergePackages.cpp  missingStockPrices.cpp  naiveConsecutiveSum.cpp  pancakeSort.cpp  scratch.cpp  scratchPad.cpp  shortestUniqueSubstring.cpp  spiralMatrix.cpp  triangeOrNot.cpp
