cmake_minimum_required(VERSION 3.9)
project(Scratch)

set(CMAKE_CXX_STANDARD 17)

add_executable(Scratch doesCircleExist.cpp)
add_executable(tuplefor triangeOrNot.cpp)
add_executable(consecutivesum consecutiveSum.cpp)
add_executable(scratch naiveConsecutiveSum.cpp)
add_executable(doesCircleExist doesCircleExist.cpp)
add_executable(challenge challenge.cpp)
add_executable(shortestUniqueSubstring shortestUniqueSubstring.cpp)
add_executable(arrayQuadruplet arrayQuadruplet.cpp)