cmake_minimum_required(VERSION 3.9)
project(Scratch)

set(CMAKE_CXX_STANDARD 17)

add_executable(Scratch doesCircleExist.cpp)
add_executable(tuplefor triangeOrNot.cpp)
add_executable(consecutivesum consecutiveSum.cpp)
add_executable(scratch scratch.cpp)
add_executable(doesCircleExist doesCircleExist.cpp)
add_executable(challenge challenge.cpp)
add_executable(shortestUniqueSubstring shortestUniqueSubstring.cpp)
add_executable(arrayQuadruplet arrayQuadruplet.cpp)
add_executable(mergePackages mergePackages.cpp)
add_executable(almostPalindrome almostPalindrome.cpp)

add_executable(scratchPad scratchPad.cpp)
add_executable(DecryptMessage DecryptMessage.cpp)
add_executable(SalesPath SalesPath.cpp)
add_executable(highestScoringWord highestScoringWord.cpp)